--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello, world!
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>WEB 110 Projects</title>
+  </head>
+  <body>
+    <h1>WEB110 Projects</h1>
+    <p>Written by: Zaria</p>
+    <nav>
+      <ul>
+        <li><a href="Week2Project/index.html">Week 2 Project</a></li>
+        <li><a href="Week3Project/index.html">Week 3 Project</a></li>
+      </ul>
+    </nav>
+  </body>
+</html>
