--- a/Week2Project/home.html
+++ b/Week2Project/home.html
@@ -1,5 +1,56 @@
-<!--this is a comment!-->
-
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Local Parks and Recreation</title>
+</head>
+<body>
 
-<h1> Hello, World!</h1>
+    <!-- Header Area -->
+    <header>
+        <h1>Welcome to Local Parks and Recreation</h1>
+    </header>
+
+    <!-- Navigation Area -->
+    <nav>
+        <b>
+            <a href="home.html">Home</a>&nbsp;&nbsp;&nbsp;
+            <a href="parks.html">Parks</a>
+        </b>
+    </nav>
+
+    <!-- Main Content Area -->
+    <main>
+        <h2>Discover Your Local Parks and Recreation Programs.</h2>
+        <p>
+            Our community is home to a variety of parks and programs designed for all ages.
+            From scenic walking trails to fun activities, there’s something for everyone!
+        </p>
+        <p>
+            Learn about recreational activities, local events, and ways to get involved.
+            Whether you’re looking for outdoor fun or community programs, we have it all! 
+            Here is a little of what we have to offer:
+        </p>
+        <ul>
+            <li>Archery</li>
+            <li>Water activities</li>
+            <li>Birding</li>
+            <li>Shelter rentals</li>
+            <li>Fishing</li>
+        </ul>
+    </main>
+
+    <!-- Footer Area -->
+    <footer>
+        <small>
+            <em>
+                Copyright © 2023 Local Parks and Recreation<br>
+                Contact: <a href="mailto:znoronha@stumail.jccc.edu">znoronha@stumail.jccc.edu</a>
+            </em>
+        </small>
+        <br><br>
+        <a href="../index.html">Return to landing page</a>
+    </footer>
+
+</body>
+
