--- a/Week2Project/index.html
+++ b/Week2Project/index.html
@@ -1,5 +1,15 @@
-<!--this is a comment!-->
-
 <!DOCTYPE html>
-
-<h1> Hello, World!</h1>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Web110Projects</title>
+  </head>
+  <body>
+    <h1>Web110Projects</h1>
+    <p>Written by: Zaria</p>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="Week2Project/home.html">Parks &amp; Rec</a> &nbsp;
+    </nav>
+  </body>
+</html>
