--- a/Week2Project/parks.html
+++ b/Week2Project/parks.html
@@ -40,7 +40,7 @@
         <small>
             <em>
                 Copyright © 2023 Local Parks and Recreation<br>
-                Contact: <a href="mailto:youremail@example.com">youremail@example.com</a>
+                Contact: <a href="maito:znoronha@stumail.jccc.edu">znoronha@stumail.jccc.edu</a>
             </em>
         </small>
         <br><br>
