--- a/index.html
+++ b/index.html
@@ -2,16 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>WEB 110 Projects</title>
+    <title>Web 110 Projects</title>
   </head>
   <body>
-    <h1>WEB110 Projects</h1>
+    <h1>Web 110 Projects</h1>
     <p>Written by: Zaria</p>
     <nav>
-      <ul>
-        <li><a href="Week2Project/index.html">Week 2 Project</a></li>
-        <li><a href="Week3Project/index.html">Week 3 Project</a></li>
-      </ul>
+      <a href="index.html">Home</a>
+      <a href="Week2Project/home.html">Parks &amp; Rec</a> &nbsp;
     </nav>
   </body>
 </html>
