--- a/Week4Project/home.html
+++ b/Week4Project/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cozy Cafe</title>
+    <title>Cozy Cafe Menu</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -24,28 +24,12 @@
 
     <!-- Main Content Area -->
     <main>
-        <h2>About Us</h2>
+        <h2>Our Menu</h2>
         <p>
-            Cozy Cafe is a warm and inviting place where you can enjoy handcrafted drinks and freshly baked pastries.
-            Whether you're catching up with friends or getting some work done, our café is the perfect spot to relax.
+            Enjoy our selection of handcrafted drinks and freshly baked treats!
         </p>
 
-        <h3>What We Offer:</h3>
+        <h3>Coffee & Beverages</h3>
         <ul>
-            <li>Freshly brewed coffee & tea</li>
-            <li>Delicious homemade pastries</li>
-            <li>Comfortable seating & free Wi-Fi</li>
-            <li>Friendly atmosphere</li>
-        </ul>
-    </main>
-
-    <!-- Footer Area -->
-    <footer>
-        <small>
-            © 2025 Cozy Cafe. All Rights Reserved.<br>
-            Contact: <a href="mailto:cozy@cafe.com">cozy@cafe.com</a>
-        </small>
-    </footer>
-
-</body>
-</html>
+            <li><strong>Espresso</strong> -- Bold and rich coffee shot</li>
+            <li><strong>Iced Latte</strong> -- C
