--- a/Week4Project/menu.html
+++ b/Week4Project/menu.html
@@ -31,21 +31,20 @@
 
         <h3>Coffee & Beverages</h3>
         <ul>
-            <li><strong>Espresso</strong> - Bold and rich coffee shot</li>
-            <li><strong>Iced Latte</strong> - Chilled espresso with creamy milk</li>
-			<li><strong>Chai Tea</strong> - A spicy and romantic tea blend</li>
-		</p>
-			
-		<h4>Pastries</h4>
-		</p>
-			
-		   <li><strong>Crissant</strong> - Flaky, buttery pastry</li>
-		   <li><strong>Blueberry Muffin</strong> - Baked fresh with real blueberries</li>
-		   <li><strong>Chocolate Chip Cookie</strong> - Stoft and chewy classic treat </li>
+            <li><strong>Espresso</strong> -- Bold and rich coffee shot</li>
+            <li><strong>Iced Latte</strong> -- Chilled espresso with creamy milk</li>
+            <li><strong>Chai Tea</strong> -- A spicy and aromatic tea blend</li>
         </ul>
-	</main>
-	
-	<!-- Footer Area -->
+
+        <h3>Pastries</h3>
+        <ul>
+            <li><strong>Croissant</strong> -- Flaky, buttery pastry</li>
+            <li><strong>Blueberry Muffin</strong> -- Baked with real blueberries</li>
+            <li><strong>Chocolate Chip Cookie</strong> -- Soft and chewy classic treat</li>
+        </ul>
+    </main>
+
+    <!-- Footer Area -->
     <footer>
         <small>
             © 2025 Cozy Cafe. All Rights Reserved.<br>
